// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEO graphql query remains unchanged 1`] = `
Array [
  "
      query {
        site {
          siteMetadata {
            title
            description
            author
          }
        }
      }
    ",
]
`;

exports[`SEO renders correctly 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "langTest",
    }
  }
  meta={
    Array [
      Object {
        "content": "descriptionTest",
        "name": "description",
      },
      Object {
        "content": "titleTest",
        "property": "og:title",
      },
      Object {
        "content": "descriptionTest",
        "property": "og:description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "authorDescriptionTest",
        "name": "twitter:creator",
      },
      Object {
        "content": "titleTest",
        "name": "twitter:title",
      },
      Object {
        "content": "descriptionTest",
        "name": "twitter:description",
      },
      Object {
        "content": "keywordTest1, keywordTest1",
        "name": "keywords",
      },
      Object {
        "content": "Test",
        "name": "extendedMeta",
      },
    ]
  }
  title="titleTest"
  titleTemplate="%s | titleTest"
/>
`;

exports[`SEO renders with defaultProps 1`] = `
<Helmet
  htmlAttributes={
    Object {
      "lang": "en",
    }
  }
  meta={
    Array [
      Object {
        "content": "siteDescriptionTest",
        "name": "description",
      },
      Object {
        "content": "defaultsTestTitle",
        "property": "og:title",
      },
      Object {
        "content": "siteDescriptionTest",
        "property": "og:description",
      },
      Object {
        "content": "website",
        "property": "og:type",
      },
      Object {
        "content": "summary",
        "name": "twitter:card",
      },
      Object {
        "content": "authorDescriptionTest",
        "name": "twitter:creator",
      },
      Object {
        "content": "defaultsTestTitle",
        "name": "twitter:title",
      },
      Object {
        "content": "siteDescriptionTest",
        "name": "twitter:description",
      },
    ]
  }
  title="defaultsTestTitle"
  titleTemplate="%s | titleTest"
/>
`;
